kotlin/programming-kotlin_code/functions/output/changingparameters.output
changingparameters.kts:2:3: error: val cannot be reassigned
  name = name.toUpperCase()
  ^
